syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "SimpleInfo.proto";
import "PlayingState.proto";

message FriendListInfo {
	string KDLEHAPNACL = 12;
	SimpleInfo simple_info = 8;
	bool is_marked = 11;
	PlayingState playing_state = 7;
	//NAAJKLMNIJI EFAEALKEIPD = 13;
	int64 sent_time = 6;
}