syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "SimpleInfo.proto";
import "FriendListInfo.proto";

message GetFriendListInfoScRsp {
	repeated SimpleInfo simple_info_list = 11;
	repeated FriendListInfo friend_list = 2;
	uint32 retcode = 3;
}