syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "AssistSimpleInfo.proto";
import "FriendOnlineStatus.proto";
import "PlatformType.proto";

message SimpleInfo {
	uint32 chat_bubble_id = 5;
	string signature = 6;
	repeated AssistSimpleInfo assist_simple_info = 1;
	string CDFPLBBIKDI = 10;
	PlatformType platform_type = 3;
	int64 last_active_time = 11;
	uint32 head_icon = 8;
	uint32 uid = 15;
	bool is_banned = 4;
	string nickname = 7;
	FriendOnlineStatus online_status = 14;
	uint32 level = 12;
	string EMGADLCGDBF = 2;
}